sector view